# tiny

./: .gitignore  Tiny.uproject
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/Abilities/: Ability_AOEBlast.uasset  Ability_Icicle.uasset
Content/Abilities/Spells/: Ability_AOEBlast.uasset  Ability_Icicle.uasset
Content/Abilities/Weapons/: Ability_Weapon_Melee.uasset
Content/Characters/: Bot_Enemy.uasset
Content/Characters/Mannequins/Animations/: ABP_Manny.uasset
Content/Characters/Mannequins/Materials/Instances/Manny/: MI_Manny_03.uasset  MI_Manny_3.uasset
Content/Characters/Mannequins/Meshes/: AM_Fireball.uasset  SK_Mannequin.uasset  SK_Mannequin_Fireball.uasset
Content/Data/: CharacterData.uasset  DT_CharacterAbilities.uasset
Content/TopDown/Blueprints/: BP_TopDownCharacter.uasset  BP_TopDownController.uasset  BP_TopDownGameMode.uasset
Content/UI/: M_AbilityIcon.uasset  WBP_AbilityActivationIcon.uasset  WBP_Hud.uasset
Content/UI/IconTextures/: T_UI_AOEHeal.uasset  T_UI_Fireball.uasset  T_UI_Icicle.uasset  T_UI_IconBorder.uasset  T_UI_IconBorderActivation.uasset
Content/VFX/: NS_TargetBeam.uasset
Content/VFX/Abilities/Fireball/: NS_Fireball.uasset
Content/__ExternalActors__/TopDown/Maps/TopDownMap/5/2B/: N00J81ZN9Z5TONPERDLTXI.uasset
Source/: Tiny.Target.cs  TinyEditor.Target.cs
Source/Tiny/: TCharacter.cpp  TCharacter.h  TCheatManager.cpp  TCheatManager.h  TGamemode.cpp  TGamemode.h  TGameplayGlobals.cpp  TGameplayGlobals.h  TPlayerController.cpp  TPlayerController.h  TTypes.h  Tiny.Build.cs  Tiny.cpp
Source/Tiny/Animation/: TAnimNotify_EmitEvent.cpp  TAnimNotify_EmitEvent.h  TAnimNotify_EmitTEvent.cpp  TAnimNotify_EmitTEvent.h
Source/Tiny/Components/: TAbilityComponent.cpp  TAbilityComponent.h  TAbilitySystemComponent.cpp  TAbilitySystemComponent.h
Source/Tiny/Gameplay/: TAbility.cpp  TAbility.h  TAbilityTask.cpp  TAbilityTask.h  TGameplayTypes.h  TProjectile.cpp  TProjectile.h
Source/Tiny/Gameplay/Abilities/: TAbility_AOEHeal.cpp  TAbility_AOEHeal.h  TAbility_Fireball.cpp  TAbility_Fireball.h
Source/Tiny/Gameplay/AbilityTasks/: TAbilityTask_PlayActionAndWaitForEvent.cpp  TAbilityTask_PlayActionAndWaitForEvent.h  TAbilityTask_SpawnActorAndWaitForEvent.cpp  TAbilityTask_SpawnActorAndWaitForEvent.h
Source/Tiny/NPC/: TAIController.cpp  TAIController.h
Source/Tiny/UI/: TAbilityActivationIconWidget.cpp  TAbilityActivationIconWidget.h  THUD.cpp  THUD.h  THudWidget.cpp  THudWidget.h
buildtools/: CMakeLists.txt
buildtools/src/appframework/: app.cc  app.h
buildtools/src/appframework/os/: main.cc  win32.cc
hypergraph/: CMakeLists.txt  README.md
hypergraph/src/compiler/: compiler.cc
hypergraph/src/core/: queue.h
hypergraph/src/platform/: README.md  app.cc  app.h  file.h  main.h
hypergraph/src/platform/framework/: window.h
hypergraph/src/platform/os/: main.cc  win32.cc  win32.h
hypergraph/src/renderer/: backend.h  renderer.cc  renderer.h
hypergraph/src/renderer/backend/: d3d12.h  opengl.h  vulkan.h
hypergraph/tests/: tier0.hg
tiny-engine/: engine.hg
tiny-engine/src/engine/editor/: editor.c
